--- a/e_learning_platform/pubspec.yaml
+++ b/e_learning_platform/pubspec.yaml
@@ -28,9 +28,16 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  cloud_firestore: ^4.10.0
   cupertino_icons: ^1.0.2
+  eva: ^1.2.0
+  eva_icons_flutter: ^3.1.0
+  firebase_auth: ^4.11.0
+  firebase_core: ^2.18.0
   flutter:
     sdk: flutter
+  font_awesome_flutter: ^10.6.0
+  google_sign_in: ^6.1.5
   page: ^1.2.1
   page_transition: ^2.1.0
 
